se quitaron redes sociales

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 
 			<!--Reded Sociales-->
 			<div class="flex-w m-b-20 m-t-20">
-				<a href="https://www.facebook.com/TurismoActiv0" target="_blank" class="flex-c-m size5-5 bg3 how1 trans-04 m-r-5">
+				<a href="#" target="_blank" class="flex-c-m size5-5 bg3 how1 trans-04 m-r-5">
 					<i class="fa fa-facebook"></i>
 				</a>
 
-				<a href="https://www.instagram.com/turismoactivo.mx/" target="_blank" class="flex-c-m size5-5 bg4 how1 trans-04 m-r-5">
+				<a href="#" target="_blank" class="flex-c-m size5-5 bg4 how1 trans-04 m-r-5">
 					<i class="fa fa-instagram"></i>
 				</a>
 
-				<a href="https://www.youtube.com/channel/UC1_kXBsBG2WzpeQyjo9TwGQ" target="_blank" class="flex-c-m size5-5 bg5 how1 trans-04 m-r-5">
+				<a href="#" target="_blank" class="flex-c-m size5-5 bg5 how1 trans-04 m-r-5">
 					<i class="fa fa-youtube-play"></i>
 				</a>
 				
